--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,4 +5,15 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
+	background: #ececec;
+	/* overflow-y: hidden; */
+	font-size: 16px;
+}
+
+p,
+h1,
+h2,
+h3 {
+	margin: 0;
+	padding: 0;
 }
