--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,4 +2,139 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 30px;
 }
+
+.all_posts_container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border: 1px solid #eeeeee;
+	border-radius: 9px;
+	box-sizing: border-box;
+	width: 600px;
+	background: #ffffff;
+}
+
+.post_box {
+	display: flex;
+	width: 400px;
+	text-align: left;
+	flex-direction: column;
+	align-items: center;
+	list-style: none;
+	border-radius: 4px;
+	padding: 0;
+}
+
+.header_post {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	width: 450px;
+	padding: 30px 0px;
+}
+
+.user_img_nickname {
+	display: flex;
+	flex-direction: row;
+	gap: 5px;
+	align-items: center;
+}
+
+.image_user {
+	border-radius: 50%;
+	border: 1px solid #818181;
+	box-sizing: border-box;
+}
+
+.nickname_user {
+	color: #000000;
+	font-size: 0.9rem;
+}
+
+.btn_header {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	.btn_follow {
+		background: none;
+		border: none;
+		cursor: pointer;
+		color: #818181;
+		&:hover {
+			color: rgba(0, 118, 165, 0.774);
+		}
+	}
+	.btn_saved {
+		cursor: pointer;
+		border: none;
+		background: none;
+	}
+}
+
+.post_image {
+	max-width: 500px;
+	max-height: 600px;
+}
+
+.post_info {
+	display: flex;
+	flex-direction: column;
+	width: 450px;
+	gap: 6px;
+	padding: 20px 0px;
+}
+
+.post_info_text {
+	display: flex;
+	flex-direction: row;
+	gap: 5px;
+	box-sizing: border-box;
+}
+
+.post_title {
+	max-width: 300px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.post_body_text {
+	width: 300px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.like_view {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	width: 450px;
+}
+
+.view {
+	font-size: 0.8rem;
+	color: #818181;
+}
+.btn_like_com {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	.btn_like {
+		cursor: pointer;
+		background: none;
+		border: none;
+	}
+
+	.btn_com {
+		cursor: pointer;
+		background: none;
+		border: none;
+	}
+}
+// @media screen and (max-width: 1440px) {
+// }
