--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -6,6 +6,8 @@
 	padding-left: 60px;
 	padding-right: 60px;
 	padding-top: 30px;
+	padding-bottom: 30px;
+	background: #ffffff;
 }
 
 .logo_container {
