Мобильная адаптация 375px

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -39,7 +39,7 @@
 .user_img_nickname {
 	display: flex;
 	flex-direction: row;
-	gap: 5px;
+	gap: 7px;
 	align-items: center;
 }
 
@@ -54,23 +54,12 @@
 	font-size: 0.9rem;
 }
 
-.btn_header {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	.btn_follow {
-		background: none;
-		border: none;
-		cursor: pointer;
-		color: #818181;
-		&:hover {
-			color: rgba(0, 118, 165, 0.774);
-		}
-	}
-	.btn_saved {
-		cursor: pointer;
-		border: none;
-		background: none;
+.btn_follow {
+	background: none;
+	cursor: pointer;
+	border: none;
+	&:hover {
+		color: blue;
 	}
 }
 
@@ -108,7 +97,7 @@
 	white-space: nowrap;
 }
 
-.like_view {
+.buttons_view {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -120,14 +109,18 @@
 	font-size: 0.8rem;
 	color: #818181;
 }
-.btn_like_com {
+.btn_like_com_sav {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	justify-content: center;
 	.btn_like {
 		cursor: pointer;
 		background: none;
 		border: none;
+		&:hover {
+			fill: red;
+		}
 	}
 
 	.btn_com {
@@ -135,6 +128,70 @@
 		background: none;
 		border: none;
 	}
+	.btn_saved {
+		cursor: pointer;
+		border: none;
+		background: none;
+	}
 }
-// @media screen and (max-width: 1440px) {
-// }
+
+@media screen and (max-width: 375px) {
+	.all_posts_container {
+		width: 320px;
+	}
+	.post_box {
+		width: 250px;
+		margin-bottom: 20px;
+	}
+
+	.header_post {
+		width: 250px;
+		padding: 10px 0px;
+		.image_user {
+			width: 20px;
+			height: 20px;
+		}
+		.nickname_user {
+			font-size: 0.6rem;
+		}
+		.btn_follow {
+			font-size: 0.6rem;
+		}
+	}
+	.post_image {
+		max-width: 250px;
+		max-height: 300px;
+	}
+	.post_info {
+		width: 250px;
+	}
+	.post_body_text {
+		width: 250px;
+	}
+	.post_title {
+		font-size: 0.6rem;
+	}
+	.post_info_text {
+		font-size: 0.6rem;
+	}
+	.btn_like_com_sav {
+		.btn_like_image {
+			width: 10px;
+			height: 10px;
+		}
+		.btn_com_image {
+			width: 10px;
+			height: 10px;
+		}
+		.btn_saved_image {
+			width: 10px;
+			height: 10px;
+		}
+	}
+	.buttons_view {
+		width: 250px;
+	}
+	.view {
+		font-size: 0.5rem;
+	}
+}
