--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -8,6 +8,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
+	position: fixed;
 }
 
 .close_auth {
@@ -39,35 +40,6 @@
 .name_form {
 	font-size: 1.3rem;
 	margin-bottom: 40px;
-}
-
-.inputs {
-	display: flex;
-	flex-direction: column;
-	gap: 6px;
-}
-
-.input_box {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	text-align: left;
-	gap: 3px;
-}
-
-.label_auth {
-	font-size: 0.9rem;
-}
-
-.input_auth {
-	width: 250px;
-	height: 30px;
-	border-radius: 6px;
-	outline: none;
-	border: 1px solid grey;
-	padding-left: 5px;
-	padding-right: 5px;
-	box-sizing: border-box;
 }
 
 .text_reg_log {
