--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,15 @@
 
 html,
 body {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
 	background: #ececec;
-	/* overflow-y: hidden; */
 	font-size: 16px;
+	min-width: 100vw;
 }
 
 p,
