--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -3,6 +3,7 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-evenly;
+	width: 100%;
 	padding-left: 60px;
 	padding-right: 60px;
 	padding-top: 30px;
